--- a/src/index.scss
+++ b/src/index.scss
@@ -37,7 +37,7 @@
     font-family: "Source Sans Pro", sans-serif;
     padding: 10px 15px;
     margin: 0 0 0 0;
-    text-align: center;
+    // text-align: center;
     font-size: 20px;
     color: black;
     font-weight: 300;
@@ -93,7 +93,7 @@
     padding: 10px 15px;
     color: black;
     border-radius: 3px;
-    width: 250px;
+    // width: 250px;
     font-size: 18px;
   }
 
