--- a/src/pages/Displayform/Displayform.module.scss
+++ b/src/pages/Displayform/Displayform.module.scss
@@ -2,4 +2,13 @@
     background: #efefef;
     border-radius: 5px;
     border: 1px solid #444;
+
+    .container {
+        padding: 30px 20px;
+    }
+
+    #displayForm.container {
+        max-width: unset;
+        margin: auto;
+    }
 }
