--- a/src/styles/_pages.scss
+++ b/src/styles/_pages.scss
@@ -1,2 +1,3 @@
 @import '../pages/TabbedRoot/TabbedRoot.module';
 @import "../pages/Displayform/Displayform.module";
+@import "../pages/Createattribute/Createattribute.module";
