--- a/src/components/AttributeCreator/AttributeCreator.component.scss
+++ b/src/components/AttributeCreator/AttributeCreator.component.scss
@@ -1,3 +1,28 @@
 .c-AttributeCreator {
-  
+    padding-top: 0;
+
+    &.c-AttributeCreator--shadow {
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+        &:hover {
+            box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+        }
+    }
+    .c-AttributeCreator__content  {
+        border: 1px solid #ccc;
+        padding: 30px 20px;
+
+        .c-AttributeCreator__attribute-selector__btn-Submit, .c-AttributeCreator__attribute-customizer__btn-Submit {
+            padding: 0.7rem 2rem;
+            font-size: 1.3rem;
+            background: #f50057;
+            span {
+                font-weight: 700;
+            }
+        }
+    }
+
+    &:not(:last-child) {
+        margin-bottom: 1rem;
+    }
 }
