--- a/src/components/ButtonsPanel/ButtonsPanel.component.scss
+++ b/src/components/ButtonsPanel/ButtonsPanel.component.scss
@@ -1,3 +1,14 @@
 .c-ButtonsPanel {
-  
+    .c-AttributeCreator__attribute-selector__btn-Submit, .c-AttributeCreator__attribute-customizer__btn-Submit {
+        padding: 0.7rem 2rem;
+        font-size: 1.3rem;
+        background: #f50057;
+        span {
+            font-weight: 700;
+        }
+        &.disabled {
+            background: #666;
+            color: #bbb;
+        }
+    }
 }
