Added Section Creator

--- a/src/components/AttributeCustomizerStrip/AttributeCustomizerStrip.component.scss
+++ b/src/components/AttributeCustomizerStrip/AttributeCustomizerStrip.component.scss
@@ -1,7 +1,7 @@
 .c-AttributeCustomizerStrip {
   // display: none;
   position: relative;
-  &:focus, &:hover {
+  &:hover {
     .c-AttributeCustomizerStrip__field--transition-width {
       .c-TextInput {
         width: 400px;
